--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,104 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Prompt');
+
+
+
+.app {
+  font-family: 'Prompt', sans-serif;
+  width:850px;
+  height: 700px;
+
+    margin:0 auto;
+}
+
+.header {
+  /* animation: App-logo-spin infinite 20s linear; */
   text-align: center;
+  height: 100px;
+  font-size: 70px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.gamearea{
+  float:left;
+  width:850px;
+  height:500px;
+
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.score{
+  /* float: right; */
+  font-size: 14px;
+  width: 300px;
+  height: 130px;
+  margin:0 auto;
+  float: right;
+}
+
+
+.reset{
+  width: 300px;
+  height: 40px;
+float: right;
+padding-top: 10px;
+text-align: center;
+}
+
+.board{
+  height: 400px;
+  width:350px;
+  border: 1px solid black;
+  /* align: center; */
+}
+
+.gridforbuttons{
+  width:525px;
+  height: 40px;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  justify-content: space-between;
+  /* margin:0 auto; */
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.button{
+  width:75px;
 }
 
-@keyframes App-logo-spin {
+.slots{
+  border: 1px solid black;
+  height: 351px;
+}
+
+.gridsfordots{
+
+  height: 450px;
+  width:525px;
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: wrap;
+  /* margin:0 auto; */
+
+}
+
+.dots {
+  height: 75px;
+  width: 75px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+
+
+
+
+
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-}
+} */
